--- a/service-profile.html
+++ b/service-profile.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="./utils/css/styles.css" />
+
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
-    <link
-      rel="stylesheet"
-      href="./utils/css/schedularCss/mobiscroll.javascript.min.css"
-    />
-    <script src="./schedularJs/mobiscroll.javascript.min.js"></script>
+    <link rel="stylesheet" href="./utils/css/fullCalendar/main.min.css" />
+    <script src="./utils/js/fullCalendar/main.js" defer></script>
+    <script src="./utils/js/calendar.js" defer></script>
+
+    <link rel="stylesheet" href="./utils/css/styles.css" />
     <title>Service Profile - Dashboard</title>
   </head>
 
@@ -331,7 +331,7 @@
                   <div class="schedular w-full md:w-[61%]">
                     <div
                       class="schedular-calendar"
-                      id="demo-desktop-day-view"
+                      id="schedular-calendar"
                     ></div>
                   </div>
 
