worked on Calendar & responsiveness of Dashbrd Pages

--- a/dashboard.html
+++ b/dashboard.html
@@ -13,6 +13,8 @@
     />
     <link rel="stylesheet" href="./utils/css/styles.css" />
 
+    <script src="./utils/js/dashboard.js" defer></script>
+
     <title>Dashboard - PairTime</title>
   </head>
 
@@ -295,6 +297,5 @@
         },
       };
     </script>
-    <script src="./utils/js/dashboard.js"></script>
   </body>
 </html>
