--- a/create-post.html
+++ b/create-post.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
-
     <link rel="stylesheet" href="./utils/css/fullCalendar/main.min.css" />
+    <link rel="stylesheet" href="./utils/css/styles.css" />
+
     <script src="./utils/js/fullCalendar/main.js" defer></script>
     <script src="./utils/js/calendar.js" defer></script>
+    <script src="./utils/js/dashboard.js" defer></script>
 
-    <link rel="stylesheet" href="./utils/css/styles.css" />
     <title>Create a post</title>
   </head>
 
@@ -238,10 +238,10 @@
 
             <div class="center pt-5 lg:pt-2 h-full pb-8">
               <p class="text-clr_blue_light text-xs lg:text-sm">
-                PairTime <span class="font-light">></span> Post a request
+                PairTime <span class="font-semibold">></span> Post a request
               </p>
 
-              <div class="flex justify-between items-center">
+              <div class="md:flex md:justify-between md:items-center">
                 <p
                   class="text-clr_blue_light text-base lg:text-xl font-semibold mt-2 mb-4 flex-1"
                 >
@@ -250,17 +250,17 @@
 
                 <div class="flex gap-2">
                   <button
-                    class="text-[#A6A6A6] bg-[#ECECEC] text-sm py-2 px-5 rounded-2xl font-semibold hover:shadow-btn"
+                    class="flex-1 text-[#A6A6A6] bg-[#ECECEC] text-sm py-2 px-5 rounded-2xl font-semibold hover:shadow-btn"
                   >
                     <a> Cancel </a>
                   </button>
                   <button
-                    class="text-clr_blue bg-transparent text-sm py-2 px-5 rounded-2xl border-2 border-blue-700 hover:shadow-btn font-semibold"
+                    class="flex-1 text-clr_blue bg-transparent text-sm py-2 px-5 rounded-2xl border-2 border-blue-700 hover:shadow-btn font-semibold"
                   >
                     <a> Preview </a>
                   </button>
                   <button
-                    class="bg-clr_blue text-sm py-2 px-5 text-white rounded-2xl hover:shadow-btn font-semibold"
+                    class="flex-1 bg-clr_blue text-sm py-2 px-5 text-white rounded-2xl hover:shadow-btn font-semibold"
                   >
                     <a> Post </a>
                   </button>
@@ -309,14 +309,14 @@
                     >No predicitions yet</span
                   >
                 </p>
-                <div class="flex items-center pt-7">
+                <div class="md:flex items-center pt-7">
                   <p
                     class="text-clr_blue_light text-xl font-semibold mt-2 mb-3 flex-1"
                   >
                     Scheduling
                   </p>
-                  <div class="flex w-[36%] gap-2">
-                    <div class="w-[9rem]">
+                  <div class="md:flex lg:w-[36%] gap-2">
+                    <div class="w-full md:w-[9rem] mb-3 md:mb-0">
                       <input
                         placeholder="Find Time Zone"
                         class="placeholder:text-clr_gray_light placeholder:text-[11px] px-3 py-3 rounded-lg block w-full"
@@ -343,15 +343,16 @@
                   class="border-bottom w-full border-b-[0.5px] opacity-60 mt-5"
                 ></div>
 
-                <div class="flex flex-col md:flex-row justify-between pt-8">
-                  <div class="schedular w-full md:w-[61%]">
+                <div class="xl:flex xl:justify-between pt-8">
+                  <div class="schedular w-full xl:w-[61%]">
                     <div
                       class="schedular-calendar"
                       id="schedular-calendar"
                     ></div>
+                    <!-- <Calendar {plugins} {options} /> -->
                   </div>
 
-                  <div class="right-side w-full md:w-[36%] pt-2">
+                  <div class="right-side w-full xl:w-[36%] pt-2">
                     <p
                       class="text-clr_blue_light text-xs font-semibold leading-6 mt-3"
                     >
@@ -359,10 +360,10 @@
                       interface on the left side.
                     </p>
                     <ul class="list-disc pt-2 ml-6 capitalize">
-                      <li class="text-clr_blue_light opacity-70 text-xs">
+                      <li class="text-clr_blue_light opacity-70 mb-2 text-xs">
                         Click on the calendar to create a slot.
                       </li>
-                      <li class="text-clr_blue_light opacity-70 text-xs">
+                      <li class="text-clr_blue_light opacity-70 mb-2 text-xs">
                         To delete a slot, press the Delete key or the Backspace
                         key.
                       </li>
@@ -372,7 +373,7 @@
                     </ul>
 
                     <div
-                      class="time-slot mt-4 bg-[#FFFFFF] px-6 py-5 rounded-lg"
+                      class="time-slot mt-4 bg-[#FFFFFF] md:px-6 px-[3%] py-5 rounded-lg"
                     >
                       <p class="text-clr_blue_light text-sm font-semibold pb-5">
                         Selected time slot
@@ -382,7 +383,7 @@
                         class="border-bottom w-full border-b-[0.5px] opacity-60"
                       ></div>
 
-                      <div class="flex justify-between pt-6 gap-5">
+                      <div class="flex justify-between pt-6 md:gap-5 gap-2">
                         <div class="flex-1">
                           <p
                             class="text-clr_blue_light text-xs font-semibold mb-4"
@@ -398,7 +399,9 @@
                           >
                             Start Time:
                           </p>
-                          <div class="relative w-[9rem] shadow-input">
+                          <div
+                            class="relative w-[8rem] md:w-[9rem] shadow-input"
+                          >
                             <input
                               type="text"
                               placeholder="1 : 45 AM"
@@ -427,7 +430,9 @@
                           >
                             Start Time:
                           </p>
-                          <div class="relative w-[9rem] shadow-input">
+                          <div
+                            class="relative w-[8rem] md:w-[9rem] shadow-input"
+                          >
                             <input
                               type="text"
                               placeholder="1 : 45 AM"
@@ -444,7 +449,7 @@
                     </div>
 
                     <div
-                      class="time-slot mt-5 bg-[#FFFFFF] px-5 py-6 rounded-lg"
+                      class="time-slot mt-5 bg-[#FFFFFF] md:px-6 px-[3%] py-6 rounded-lg"
                     >
                       <p class="text-clr_blue_light text-sm font-semibold mb-5">
                         Add recurring rule
@@ -557,9 +562,9 @@
                   <div
                     class="border-bottom w-full border-b-[0.5px] opacity-60"
                   ></div>
-                  <div class="pt-7 flex justify-between">
-                    <div class="w-[49%]">
-                      <p class="text-clr_blue_light text-xs font-semibold pb-5">
+                  <div class="pt-7 md:flex md:justify-between">
+                    <div class="md:w-[49%] mb-4 md:mb-0">
+                      <p class="text-clr_blue_light text-xs font-semibold pb-2">
                         Minimum duration (in minutes, optional)
                       </p>
                       <input
@@ -568,8 +573,8 @@
                         class="placeholder:text-clr_gray_light placeholder:text-xs w-full px-3 py-3 rounded-lg"
                       />
                     </div>
-                    <div class="w-[49%]">
-                      <p class="text-clr_blue_light text-xs font-semibold pb-5">
+                    <div class="md:w-[49%]">
+                      <p class="text-clr_blue_light text-xs font-semibold pb-2">
                         Minimum duration (in minutes, optional)
                       </p>
                       <input
@@ -582,7 +587,7 @@
                 </div>
                 <div class="mt-12">
                   <p
-                    class="text-clr_blue_light text-xl font-bold mt-2 pb-5 flex-1"
+                    class="text-clr_blue_light text-xl font-semibold mt-2 pb-5 flex-1"
                   >
                     Budget
                   </p>
@@ -597,7 +602,7 @@
                     </p>
                   </div>
                   <button
-                    class="bg-clr_blue text-sm py-3 px-5 text-white rounded-2xl hover:shadow-btn font-semibold"
+                    class="bg-clr_blue text-sm py-3 px-5 text-white rounded-2xl hover:shadow-btn font-semibold w-full md:w-auto"
                   >
                     <a> Add Billing Profile </a>
                   </button>
@@ -633,32 +638,6 @@
           },
         },
       };
-
-      var inst = mobiscroll.eventcalendar("#demo-desktop-day-view", {
-        theme: "ios",
-        themeVariant: "light",
-        clickToCreate: true,
-        dragToCreate: true,
-        dragToMove: true,
-        dragToResize: true,
-        view: {
-          schedule: { type: "day" },
-        },
-        onEventClick: function (event, inst) {
-          mobiscroll.toast({
-            message: event.event.title,
-          });
-        },
-      });
-
-      mobiscroll.util.http.getJson(
-        "https://trial.mobiscroll.com/events/?vers=5",
-        function (events) {
-          inst.setEvents(events);
-        },
-        "jsonp"
-      );
     </script>
-    <script src="./utils/js/dashboard.js"></script>
   </body>
 </html>
