--- a/goto-meeting.html
+++ b/goto-meeting.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -13,6 +12,8 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./utils/css/styles.css" />
+
+    <script src="./utils/js/dashboard.js" defer></script>
 
     <title>GoTo Meeting - PairTime</title>
   </head>
@@ -524,6 +525,5 @@
         },
       };
     </script>
-    <script src="./utils/js/dashboard.js"></script>
   </body>
 </html>
