--- a/live-request.html
+++ b/live-request.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="./utils/css/styles.css" />
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./utils/css/styles.css" />
+
+    <script src="./utils/js/dashboard.js" defer></script>
 
     <title>Live Request</title>
   </head>
@@ -422,6 +424,5 @@
         },
       };
     </script>
-    <script src="./utils/js/dashboard.js"></script>
   </body>
 </html>
