--- a/search-detail.html
+++ b/search-detail.html
@@ -13,10 +13,13 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./utils/css/fullCalendar/main.min.css" />
+    <link rel="stylesheet" href="./utils/css/styles.css" />
+
     <script src="./utils/js/fullCalendar/main.js" defer></script>
     <script src="./utils/js/calendar.js" defer></script>
+    <script src="./utils/js/dashboard.js" defer></script>
+    <script src="./utils/js/searchModal.js" defer></script>
 
-    <link rel="stylesheet" href="./utils/css/styles.css" />
     <title>Search Detail - PairTime</title>
   </head>
 
@@ -528,32 +531,6 @@
           },
         },
       };
-
-      var inst = mobiscroll.eventcalendar("#demo-desktop-day-view", {
-        theme: "ios",
-        themeVariant: "light",
-        clickToCreate: true,
-        dragToCreate: true,
-        dragToMove: true,
-        dragToResize: true,
-        view: {
-          schedule: { type: "day" },
-        },
-        onEventClick: function (event, inst) {
-          mobiscroll.toast({
-            message: event.event.title,
-          });
-        },
-      });
-
-      mobiscroll.util.http.getJson(
-        "https://trial.mobiscroll.com/events/?vers=5",
-        function (events) {
-          inst.setEvents(events);
-        },
-        "jsonp"
-      );
     </script>
-    <script src="./utils/js/dashboard.js"></script>
   </body>
 </html>
